--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=security
 
 spring.datasource.url=jdbc:mysql://localhost:3306/springdb
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.username=username
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
